--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
     <style name="Theme.NiceWanandroid" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimaryVariant">@color/white</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -12,5 +12,19 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <!-- 解决浅色模式下导航栏字体颜色为白色 -->
+        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+        <item name="android:windowAnimationStyle">@style/ActivityAnimation</item>
+    </style>
+    
+    <style name="ActivityAnimation">
+        <!-- 用于设置打开新的Activity并进入新的Activity展示的动画 -->
+        <item name="android:activityOpenEnterAnimation">@anim/slide_in_top</item>
+        <!-- 用于设置打开新的Activity并销毁之前的Activity展示的动画 -->
+        <item name="android:activityOpenExitAnimation">@anim/slide_in_top</item>
+        <!-- 用于设置关闭当前Activity进入上一个Activity展示的动画 -->
+        <item name="android:activityCloseEnterAnimation">@anim/slide_in_top</item>
+        <!-- 用于设置关闭当前Activity时展示的动画 -->
+        <item name="android:activityCloseExitAnimation">@anim/slide_in_top</item>
     </style>
 </resources>
